# pst-search

./: .gitignore  MAP.md  README.md  config.yaml.template  mailarch.sh  pyproject.toml
src/pst_search/: config.py  extractor.py  indexer.py  server.py  store.py  tools.py
