[project]
name = "pst-search"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "fastembed>=0.4",
    "numpy>=1.26",
    "uvicorn>=0.30",
    "rank-bm25>=0.2",
    "pdfminer.six>=20221105",
    "python-docx>=1.1",
    "openpyxl>=3.1",
]

[project.scripts]
pst-search = "pst_search.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pst_search"]
